--- a/gradle/dependencies.toml
+++ b/gradle/dependencies.toml
@@ -69,10 +69,10 @@ kotlinSerialization = "1.4.1"
 
 # region Tangem
 tangemBlockchainSdk = "develop-174"
-# tangemBlockchainSdk = "0.0.1" # Keep it! - used for local builds
+#tangemBlockchainSdk = "0.0.1" # Keep it! - used for local builds
 
 tangemCardSdk = "develop-200"
-# tangemCardSgk = "0.0.1" # Keep it! - used for local builds
+#tangemCardSdk = "0.0.1" # Keep it! - used for local builds
 # endregion Tangem
 
 # region Tools
