--- a/gradle/dependencies.toml
+++ b/gradle/dependencies.toml
@@ -46,6 +46,7 @@ hilt = "2.44"
 hilt-navigation = "1.0.0"
 jodatime = "2.12.1"
 krateSharedPref = "2.0.0"
+kotlin-immutable-collections = "0.3.5"
 kotsonGsonExt = "2.5.0"
 lottie = "3.4.0"
 moshi = "1.12.0"
@@ -168,6 +169,7 @@ appsflyer = { module = "com.appsflyer:af-android-sdk", version.ref = "appsflyer"
 armadillo = { module = "at.favre.lib:armadillo", version.ref = "armadillo" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutine" }
+kotlin-immutable-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlin-immutable-collections" }
 desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugarJdkLibs" }
 googlePlay-core = { module = "com.google.android.play:core", version.ref = "googlePlayCore" }
 googlePlay-core-ktx = { module = "com.google.android.play:core-ktx", version.ref = "googlePlayCoreKtx" }
