--- a/gradle/dependencies.toml
+++ b/gradle/dependencies.toml
@@ -78,6 +78,7 @@ walletConnectCore = "1.18.0"
 walletConnectWeb3 = "1.11.0"
 prettyLogger = "2.2.0"
 okHttp-prettyLogging = "3.1.0"
+spr-client = "3.6.2"
 # endregion Other libraries
 
 # region Tangem
@@ -227,4 +228,5 @@ reactive-network = { module = "com.github.pwittchen:reactivenetwork-rx2", versio
 walletConnectCore = { module = "com.walletconnect:android-core", version.ref = "walletConnectCore" }
 walletConnectWeb3 = { module = "com.walletconnect:web3wallet", version.ref = "walletConnectWeb3" }
 prettyLogger = { module = "com.orhanobut:logger", version.ref = "prettyLogger" }
+sprClient = { module = "com.spr:messengerclient", version.ref = "spr-client" }
 # endregion Other
