--- a/gradle/dependencies.toml
+++ b/gradle/dependencies.toml
@@ -83,8 +83,8 @@ spr-client = "3.6.2"
 # endregion Other libraries
 
 # region Tangem
-tangemBlockchainSdk = "release-app_5.0-363"
-#tangemBlockchainSdk = "0.0.1" # Keep it! - used for local builds
+#tangemBlockchainSdk = "release-app_5.0-363"
+tangemBlockchainSdk = "0.0.1" # Keep it! - used for local builds
 tangemCardSdk = "release-app_5.0-308"
 #tangemCardSdk = "0.0.1" # Keep it! - used for local builds
 # endregion Tangem
