--- a/gradle/dependencies.toml
+++ b/gradle/dependencies.toml
@@ -88,9 +88,9 @@ spr-client = "3.6.2"
 # endregion Other libraries
 
 # region Tangem
-tangemBlockchainSdk = "develop-384"
+tangemBlockchainSdk = "release-app_5.2-385"
 #tangemBlockchainSdk = "0.0.1" # Keep it! - used for local builds
-tangemCardSdk = "develop-310"
+tangemCardSdk = "release-app_5.2-311"
 #tangemCardSdk = "0.0.1" # Keep it! - used for local builds
 # endregion Tangem
 
