--- a/gradle/dependencies.toml
+++ b/gradle/dependencies.toml
@@ -97,11 +97,16 @@ detekt = "1.22.0"
 # endregion Tools
 
 # region Testing
-espresso = "3.4.0"
+espresso = "3.5.1"
+espresso-intents = "3.5.1"
 junit = "4.13.2"
-junitAndroidExt = "1.1.3"
+junitAndroidExt = "1.1.5"
 mockk = "1.13.4"
 truth = "1.1.3"
+kaspresso = "1.5.4"
+kaspresso-compose = "1.5.4"
+compose-junit = "1.6.2"
+hamcrest = "2.2"
 # endregion Testing
 
 [plugins]
@@ -183,10 +188,15 @@ detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", 
 # region Test
 test-coroutine = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutine" }
 test-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+test-espresso-intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "espresso-intents" }
 test-junit = { module = "junit:junit", version.ref = "junit" }
 test-junit-android = { module = "androidx.test.ext:junit", version.ref = "junitAndroidExt" }
 test-truth = { module = "com.google.truth:truth", version.ref = "truth" }
 test-mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+test-kaspresso = { module = "com.kaspersky.android-components:kaspresso", version.ref = "kaspresso" }
+test-kaspresso-compose = { module = "com.kaspersky.android-components:kaspresso-compose-support", version.ref = "kaspresso-compose"}
+test-compose-junit = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-junit" }
+test-hamcrest = { module = "org.hamcrest:hamcrest", version.ref = "hamcrest" }
 # endregion Test
 
 # region Other
